# model-deployment-ii

./: app.py  dashboard.py  history.py  historymanager.py  modelloader.py  pyproject.toml  requirements.txt  style.css
pages/: 1_Dashboard.py  2_Prediction.py  3_History.py  4_Model_Analytics.py  5_About.py  about.py  modelanalytics.py  prediction.py
utils/: history_manager.py  model_loader.py
