[project]
name = "model-deployment-2"
version = "0.1.0"
description = "Employee Promotion Intelligence"
readme = "README.md"
requires-python = ">=3.10, <3.11"

dependencies = [
    "streamlit>=1.55.0",
    "pandas>=2.0.0",
    "numpy==1.24.3",
    "plotly>=5.20.0",
    "joblib==1.2.0",
    "scikit-learn==1.2.2"
]
